Fixed menu z-index issue and top_margin issue

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -32,9 +32,11 @@
     header {
         position: fixed;
         top: 0;
+        left: 0;
         width: 100vw;
         height: 70px;
         background-color: white;
+        z-index: 100;
     }    
 
     article {
@@ -104,7 +106,6 @@
 
 /* Elements By ID  \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 
-    
     /* About */
     /* ############################################# */
 
@@ -191,7 +192,7 @@
             }
 
             .margin_top { 
-                margin-top: 1rem;
+                margin-top:1rem;
             }
 
             .margin_bottom {
@@ -443,16 +444,16 @@
                     /* ############################################# */
 
                         #navbar_dropdown {
-                            visibility: hidden;
+                            display: none;
                         }
                     
                         #logo {
-                            position: absolute;
+                            position: fixed;
                             top: 0;
                             left: 0;
                             width: 100%;
                             padding: 10px 0;
-                            background: transparent;
+                            background: white;
                             text-align: center;
                             z-index: 1;
                         }
@@ -465,7 +466,7 @@
                         }
 
                         #hamburger {
-                            position: absolute;
+                            position: fixed;
                             top: 0;
                             right: 0;
                             width: 50px;
@@ -543,11 +544,11 @@
                         }
 
                         #navbar_for_mobile {
+                            display: flex;
+                            flex-direction: column;
                             background-color: transparent;
                             border-top: 2px solid #777;
                             border-bottom: 2px solid #777;
-                            display: flex;
-                            flex-direction: column;
                         }
 
                         #navbar_for_mobile span.link {
@@ -708,30 +709,21 @@
                     }
 
                     #logo {
-                        position: absolute;
-                        top: 0;
-                        left: 10px;
-                        width: 100%;
-                        padding: 10px 0;
+                        width: fit-content;
+                        padding: 10px;
                         background: transparent;
                         text-align: left;
-                        z-index: 1;
                     }
                     
                     #navbar_dropdown {
-                        visibility: visible;
-                        position: absolute;
-                        top: 0;
-                        right: 0;
-                        min-width: calc(100% - 260px);
-                        width: 100%;
-                        height: 70px;
-                        background: transparent;
-                        z-index: 2;
                         display: flex;
                         flex-direction: row;
                         justify-content: center;
                         align-items: center;
+                        width: 100%;
+                        height: 70px;
+                        min-width: calc(100% - 280px);
+                        background: transparent;
                     }
                                     
                     #navbar_dropdown a {
@@ -739,10 +731,9 @@
                         font-size: 1rem;
                     }
 
-                    
                     #navbar_dropdown button {
                         display: inline;
-                        background-color: white;
+                        background-color: transparent;
                         padding: 0.3rem;
                         border: 0;
                     }
@@ -780,14 +771,19 @@
                 /* About */
                 /* ############################################# */
 
+                    #about section {
+                        margin-bottom: 0;
+                        padding-bottom: 0;
+                    }
+                
                     #about #main {
-                        max-width: 35%;
+                        width: 35%;
                         padding-right: 1rem;
                     }
                 
                     #about #right {
                         display: block;
-                        max-width: 65%;
+                        width: 65%;
                         display: flex;
                         flex-wrap: wrap;
                         justify-content: flex-start;
@@ -795,10 +791,15 @@
 
                     #about span {
                         display: block;
+                        position: relative;
                         max-width: 50%;
                         height: fit-content;
                         margin-right: 0.25rem;
                         margin-bottom: 0.25rem;
+                    }
+
+                    #about span:last-child {
+                        margin-bottom: 1rem;
                     }
 
                     #about a {
@@ -813,11 +814,15 @@
                     }
 
                     #about span h3 {
-                        font-weight: 600;
-                        color: #D4D4D4;
-                        background-color: #555;
+                        position:absolute;
+                        bottom: 0;
+                        width: 100%;
                         margin: 0;
-                        padding: 0;
+                        padding: 0 0.25rem;
+                        font-weight: 500;
+                        color: #D4D4D4;
+                        background-color: rgba(75, 75, 75, .85);
+                        text-align: left;
                     }
 
                 /* Services */
